use z-index to make navbar the topmost layer, remove margin-top to fix main-content scroll issue

--- a/pictochat-fe/src/components/App/App.less
+++ b/pictochat-fe/src/components/App/App.less
@@ -13,17 +13,10 @@ body {
       text-decoration: underline;
     }
   }
-
-  img.ui.image {
-    /* Prevents visible overlap with fixed position header when scrolling */
-    position: static;
-  }
 }
 
 #main-content {
-  /* position: relative; */
+  position: relative;
   top: @navHeight;
-  height: calc(100% - @navHeight);
   padding: 30px;
-  margin-top: @navHeight;
 }
